# technicolor-tarnished

./: Cargo.toml  LICENSE.txt  README.md
example-configurations/custom-role/: phantom_color_profile.toml
example-configurations/rainbow-script/: phantom_color_profile.toml  rainbow.rn
example-configurations/recoloured-summons/: phantom_color_profile.toml
src/: console.rs  lib.rs  mod_data.rs  profile.rs  scripting.rs
